--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@teamhanko/hanko-elements": "^0.9.0",
+    "@types/react": "^18.2.36",
     "express-jwt": "^8.4.1",
     "jwks-rsa": "^3.1.0",
+    "react": "^18.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
