--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-jwt": "^8.4.1",
     "jwks-rsa": "^3.1.0",
     "react": "^18.2.0",
+    "react-router-dom": "^6.18.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -42,6 +43,7 @@
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "@vitejs/plugin-react": "^4.1.1",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
